separate exercise solutions

--- a/00_zero/02_condicionales.ipynb
+++ b/00_zero/02_condicionales.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejercicio**\n",
+    "**Ejercicio 01**\n",
     "\n",
     "Evaluar condiciones para `y`.\n",
     "\n",
@@ -274,23 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if y < 2:\n",
-    "    x = \"A\"\n",
-    "\n",
-    "elif y < 8:\n",
-    "    x = \"B\"\n",
-    "\n",
-    "elif y == 10:\n",
-    "    x = \"C\"\n",
-    "\n",
-    "else:\n",
-    "    y -= 1  # igual -> y = y - 1\n",
-    "    print(\"no se cumple nada\")\n",
-    "    print(\"Y tiene el valor:\", y)"
+    "## CODE"
    ]
   },
   {
@@ -310,7 +298,7 @@
     }
    ],
    "source": [
-    "x"
+    "print(x)"
    ]
   }
  ],
