--- a/00_zero/03_loops.ipynb
+++ b/00_zero/03_loops.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio\n",
+    "## Ejercicio 01\n",
     "\n",
     "La torre agbar de Barcelona mide 114m. Tenemos cajas de 0.5 m. El primer día ponemos una caja. Cada día duplicamos el número de cajas.\n",
     "\n",
@@ -97,22 +97,10 @@
     "dias = 1\n",
     "cajas = 1\n",
     "\n",
-    "altura_actual = 0.5\n",
-    "altura_torre = 114\n",
-    "altura_caja = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while altura_actual < altura_torre:\n",
-    "    dias += 1\n",
-    "    cajas *= 2\n",
-    "    \n",
-    "    altura_actual = cajas * altura_caja"
+    "### Variables\n",
+    "\n",
+    "\n",
+    "## CODE"
    ]
   },
   {
