--- a/00_zero/04_funciones.ipynb
+++ b/00_zero/04_funciones.ipynb
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "### Ejercicio 01\n",
     "\n",
     "```python\n",
     "def añadir_a_lista(valor, mylist=[]):\n",
@@ -549,91 +549,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Opción 1**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def añadir_a_lista(valor, mylist=[]):\n",
-    "\n",
-    "    if len(mylist) > 0:\n",
-    "        mylist = []\n",
-    "\n",
-    "    mylist.append(valor)\n",
-    "\n",
-    "    return mylist"
+    "### CODE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Opción 2**  \n",
-    "Válido, pero estamos poniendo complejidad añadida de forma innecesaria."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def añadir_a_lista(valor, mylist=[]):\n",
-    "    \n",
-    "    mylist = mylist.clear()\n",
-    "\n",
-    "    mylist.append(valor)\n",
-    "\n",
-    "    return mylist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Opción 3**\n",
-    "\n",
-    "Forma correcta.\n",
-    "\n",
-    "Si queremos tener siempre una lista vacía al iniciar la ejecución de la función: ¿por qué no directamente declarar la variable DENTRO de la función?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def añadir_a_lista(valor):\n",
-    "\n",
-    "    mylist = []\n",
-    "\n",
-    "    mylist.append(valor)\n",
-    "\n",
-    "    return mylist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Crear una función para esto en Python no tendría ningún sentido. Si queremos añadir algo a una lista solo tenemos que usar directamente `.append()`. Los ejemplos se han usado para repasar lo que se ha visto al inicio y para tener en cuenta algunas consideraciones a la hora de programar.\n",
-    "\n",
-    "Y ante la duda -> Google"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejercicio\n",
+    "### Ejercicio 02\n",
     "\n",
     "* Crear dos variables que sea una listas vacías\n",
     "* Buscar sobre todas las palabras de la lista.\n",
@@ -687,234 +615,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "was\n",
-      "late\n",
-      "van\n",
-      "at\n",
-      "Informatica\n",
-      "Netherlands\n",
-      "as\n",
-      "a\n",
-      "language\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista_con_e = []\n",
     "lista_indices = []\n",
     "\n",
     "for palabra in mylist:\n",
     "    \n",
-    "    ### CODE ###\n",
-    "    if \"e\" in palabra:\n",
-    "        lista_con_e.append(palabra)\n",
-    "        \n",
-    "    if \"a\" in palabra:\n",
-    "        print(palabra)\n",
-    "        \n",
-    "    else:\n",
-    "        indice = mylist.index(palabra)\n",
-    "        lista_indices.append(indice)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nothing: Python\n",
-      "was\n",
-      "nothing: in\n",
-      "late\n",
-      "nothing: 1980s[34]\n",
-      "nothing: by\n",
-      "nothing: Guido\n",
-      "van\n",
-      "nothing: Rossum\n",
-      "at\n",
-      "nothing: &\n",
-      "Informatica\n",
-      "nothing: (CWI)\n",
-      "nothing: in\n",
-      "Netherlands\n",
-      "as\n",
-      "a\n",
-      "nothing: to\n",
-      "nothing: ABC\n",
-      "language\n"
-     ]
-    }
-   ],
-   "source": [
-    "lista_con_e = []\n",
-    "lista_indices = []\n",
-    "\n",
-    "for palabra in mylist:\n",
-    "\n",
-    "    if \"e\" in palabra:\n",
-    "        lista_con_e.append(palabra)\n",
-    "\n",
-    "    if \"a\" in palabra:\n",
-    "        print(palabra)\n",
-    "\n",
-    "    if (\"e\" not in palabra) and (\"a\" not in palabra):\n",
-    "        print(\"nothing:\", palabra)\n",
-    "        lista_indices.append(mylist.index(palabra))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para ordenar una lista:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['&',\n",
-       " '(CWI)',\n",
-       " 'ABC',\n",
-       " '1980s[34]',\n",
-       " 'Informatica',\n",
-       " 'a',\n",
-       " 'conceived',\n",
-       " 'the',\n",
-       " 'late',\n",
-       " 'Wiskunde',\n",
-       " 'the',\n",
-       " 'the',\n",
-       " 'language',\n",
-       " 'Rossum',\n",
-       " 'Centrum',\n",
-       " 'Python',\n",
-       " 'in',\n",
-       " 'van',\n",
-       " 'in',\n",
-       " 'Guido',\n",
-       " 'to',\n",
-       " 'successor',\n",
-       " 'was',\n",
-       " 'Netherlands',\n",
-       " 'as',\n",
-       " 'at',\n",
-       " 'by']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted(mylist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primera_mitad = None\n",
-    "segunda_mitad = None\n",
-    "\n",
-    "longitud = len(mylist)\n",
-    "\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(mylist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primera_mitad = math.ceil(longitud / 2)\n",
-    "\n",
-    "lista_m1 = mylist[:primera_mitad]\n",
-    "\n",
-    "lista_m2 = mylist[primera_mitad:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mylist[::-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lista_invertida = list(reversed(mylist))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<list_reverseiterator at 0x10b061710>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reversed(mylist)"
+    "    ### CODE ###"
    ]
   }
  ],
