--- a/00_zero/05_estructuras_de_datos.ipynb
+++ b/00_zero/05_estructuras_de_datos.ipynb
@@ -1383,7 +1383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio\n",
+    "## Ejercicio 01\n",
     "\n",
     "* Iterar sobre la lista de equipos.\n",
     "* En cada equipo (pc), iterar sobre sus elementos y sumarlos.\n",
@@ -1396,36 +1396,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# suma = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "el pc ip management tiene mas de 200\n"
-     ]
-    }
-   ],
-   "source": [
-    "for nombre, valores in equipos.items():\n",
-    "        \n",
-    "    if sum(valores) > 200:\n",
-    "        print(\"el pc\", nombres_pc[nombre], \"tiene mas de 200\")\n",
-    "    \n",
-    "    suma = 0"
+    "### CODE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "### Ejercicio 02\n",
     "\n",
     "Con la lista `lista_miembros`.\n",
     "* Añadir al final de la lista el item `\"ricardo\"`\n",
@@ -1444,73 +1422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_miembros.append(\"ricardo\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A ver si el último valor de la lista es \"ricardo\":"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ricardo'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_miembros[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "student\n",
-      "ricardo está aquí\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 0\n",
-    "\n",
-    "for nombre in lista_miembros:\n",
-    "    if nombre == \"ricardo\":\n",
-    "        print(\"ricardo está aquí\")\n",
-    "    else:\n",
-    "        print(\"student\")\n",
-    "\n",
-    "    if \"i\" in nombre:\n",
-    "        x += 1"
+    "### CODE"
    ]
   }
  ],
@@ -1530,7 +1442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
