--- a/00_zero/06_strings.ipynb
+++ b/00_zero/06_strings.ipynb
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "### Ejercicio 01\n",
     "\n",
     "* Generar un string en minúsculas separado por espacios a partir de la lista que teníamos: `mylist`\n",
     "* Reemplazar: `( ) [ ]` por un string vacio.\n",
@@ -520,7 +520,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadena = \" \".join(mylist).lower()"
+    "mylist = [\n",
+    "    \"Python\",\n",
+    "    \"was\",\n",
+    "    \"conceived\",\n",
+    "    \"in\",\n",
+    "    \"the\",\n",
+    "    \"late\",\n",
+    "    \"1980s[34]\",\n",
+    "    \"by\",\n",
+    "    \"Guido\",\n",
+    "    \"van\",\n",
+    "    \"Rossum\",\n",
+    "    \"at\",\n",
+    "    \"Centrum\",\n",
+    "    \"Wiskunde\",\n",
+    "    \"&\",\n",
+    "    \"Informatica\",\n",
+    "    \"(CWI)\",\n",
+    "    \"in\",\n",
+    "    \"the\",\n",
+    "    \"Netherlands\",\n",
+    "    \"as\",\n",
+    "    \"a\",\n",
+    "    \"successor\",\n",
+    "    \"to\",\n",
+    "    \"the\",\n",
+    "    \"ABC\",\n",
+    "    \"language\",\n",
+    "]"
    ]
   },
   {
@@ -529,163 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadena_limpia = cadena.replace(\"(\", \"\").replace(\")\", \"\").replace(\"[\", \"\").replace(\"]\", \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cadena_final = cadena_limpia.replace(\"python\", \"golang\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La palabra es: golang\n",
-      "La palabra es: was\n",
-      "La palabra es: conceived\n",
-      "La palabra es: in\n",
-      "La palabra es: the\n",
-      "La palabra es: late\n",
-      "La palabra es: 1980s34\n",
-      "La palabra es: by\n",
-      "La palabra es: guido\n",
-      "La palabra es: van\n",
-      "La palabra es: rossum\n",
-      "La palabra es: at\n",
-      "La palabra es: centrum\n",
-      "La palabra es: wiskunde\n",
-      "La palabra es: &\n",
-      "La palabra es: informatica\n",
-      "La palabra es: cwi\n",
-      "La palabra es: in\n",
-      "La palabra es: the\n",
-      "La palabra es: netherlands\n",
-      "La palabra es: as\n",
-      "La palabra es: a\n",
-      "La palabra es: successor\n",
-      "La palabra es: to\n",
-      "La palabra es: the\n",
-      "La palabra es: abc\n",
-      "La palabra es: language\n"
-     ]
-    }
-   ],
-   "source": [
-    "for palabra in cadena_final.split():\n",
-    "    print(f\"La palabra es: {palabra}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'python was conceived in the late 1980s[34] by guido van rossum at centrum wiskunde & informatica (cwi) in the netherlands as a successor to the abc language'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cadena_unida"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = (\n",
-    "    \" \".join(mylist)\n",
-    "    .lower()\n",
-    "    .replace(\"(\", \"\")\n",
-    "    .replace(\")\", \"\")\n",
-    "    .replace(\"[\", \"\")\n",
-    "    .replace(\"]\", \"\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'golang was conceived in the late 1980s34 by guido van rossum at centrum wiskunde & informatica cwi in the netherlands as a successor to the apl language'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s.replace(\"python\", \"golang\").replace(\"abc\", \"apl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La palabra es python\n",
-      "La palabra es was\n",
-      "La palabra es conceived\n",
-      "La palabra es in\n",
-      "La palabra es the\n",
-      "La palabra es late\n",
-      "La palabra es 1980s34\n",
-      "La palabra es by\n",
-      "La palabra es guido\n",
-      "La palabra es van\n",
-      "La palabra es rossum\n",
-      "La palabra es at\n",
-      "La palabra es centrum\n",
-      "La palabra es wiskunde\n",
-      "La palabra es &\n",
-      "La palabra es informatica\n",
-      "La palabra es cwi\n",
-      "La palabra es in\n",
-      "La palabra es the\n",
-      "La palabra es netherlands\n",
-      "La palabra es as\n",
-      "La palabra es a\n",
-      "La palabra es successor\n",
-      "La palabra es to\n",
-      "La palabra es the\n",
-      "La palabra es abc\n",
-      "La palabra es language\n"
-     ]
-    }
-   ],
-   "source": [
-    "for word in s.split():\n",
-    "    \n",
-    "    # word = word.replace(\"(\", \"\").replace(\")\", \"\").replace(\"[\", \"\").replace(\"]\", \"\")\n",
-    "    \n",
-    "    print(f\"La palabra es {word}\")"
+    "### CODE"
    ]
   }
  ],
