--- a/01_comprehensions_pep8/comprehensions.ipynb
+++ b/01_comprehensions_pep8/comprehensions.ipynb
@@ -1181,197 +1181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# texto_raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"text_python.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(texto_raw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"texto_por_palabras.txt\", \"w\") as f:\n",
-    "    for palabra in texto_procesado:\n",
-    "        f.write(f\"{palabra}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"demofile.txt\", \"r\") as f:\n",
-    "        data = f.read()\n",
-    "        \n",
-    "data = data.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "palabras = data.split()\n",
-    "    \n",
-    "palabras_limpias = [p for p in palabras if p not in lista_stop]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texto_nuevo = \" \".join(palabras_limpias)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lista_stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['demofile', 'txt']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"demofile.txt\".split(\".\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eliminar_stop_words(archivo):\n",
-    "    \"\"\"\n",
-    "    Elimina las stop words de un archivo de texto.\n",
-    "    \n",
-    "    Guarda el nuevo texto en un archivo con el mismo nombre\n",
-    "    con _procesado añadido al final.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    with open(archivo, \"r\") as f:\n",
-    "        data = f.read()\n",
-    "        \n",
-    "    data = data.lower()\n",
-    "    \n",
-    "    palabras = data.split()\n",
-    "    \n",
-    "    palabras_limpias = [p for p in palabras if p not in lista_stop]\n",
-    "    \n",
-    "    texto_nuevo = \" \".join(palabras_limpias)\n",
-    "    \n",
-    "    # conseguir de alguna manera el nombre del archivo SIN el .txt (la librería pathlib es MUY interesante)\n",
-    "    \n",
-    "    nombre_archivo = archivo.split(\".\")[0]\n",
-    "    nuevo_nombre = f\"{nombre_archivo}_procesado.txt\"\n",
-    "    \n",
-    "    with open(nuevo_nombre, \"w\") as f:\n",
-    "        f.write(texto_nuevo)\n",
-    "        \n",
-    "    return nuevo_nombre\n",
-    "                \n",
-    "    \n",
-    "    \n",
-    "    ### code ###\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = eliminar_stop_words(\"demofile_2.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def enviar_mail(direccion, archivo):\n",
-    "    \n",
-    "    ####\n",
-    "    ####\n",
-    "    ####\n",
-    "    \n",
-    "    return direccion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "direccion_enviada = enviar_mail(\"ricardo@gmail.com\", name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ricardo@gmail.com'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "direccion_enviada"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mi_funcion(a=0, b=0, c=1):\n",
-    "    print(\"a:\", a)\n",
-    "    print(\"b:\", b)\n",
-    "    print(\"c:\", c)\n",
-    "\n",
-    "    return"
+    "### CODE"
    ]
   }
  ],
@@ -1380,6 +1190,18 @@
    "display_name": "teach",
    "language": "python",
    "name": "teach"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
