--- a/00_zero/07_archivos.ipynb
+++ b/00_zero/07_archivos.ipynb
@@ -391,258 +391,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['',\n",
-       " 'iron man<grupo_1>',\n",
-       " 'doctor strange<group_3>',\n",
-       " 'spiderman<group_3>',\n",
-       " 'black widow<grupo_1>',\n",
-       " 'groot<group_3>',\n",
-       " 'quill<group_3>',\n",
-       " 'gamora<grupo-2>',\n",
-       " 'mantis<group_3>',\n",
-       " 'captain america<grupo_1>',\n",
-       " 'black panther<group_3>',\n",
-       " 'okoye<group_3>',\n",
-       " 'iron man<grupo_1>',\n",
-       " 'valkyrie<grupo_1>',\n",
-       " 'korg<grupo_1>',\n",
-       " 'bruce banner<grupo_1>',\n",
-       " 'vision<grupo-2>',\n",
-       " 'hawkeye<grupo_1>',\n",
-       " 'vision<grupo-2>',\n",
-       " 'thor<grupo_1>',\n",
-       " 'gamora<grupo-2>',\n",
-       " 'captain marvel<grupo_1>',\n",
-       " 'miek<grupo_1>',\n",
-       " 'nick fury<group_3>',\n",
-       " 'rocket<grupo_1>',\n",
-       " '']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ss.split(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "personaje = ss.split(\"\\n\")[1:-1][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'iron man'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "personaje.split(\"<\")[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"1\" in personaje"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(personaje[-2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grupo1 = []\n",
-    "grupo2 = []\n",
-    "grupo3 = []\n",
-    "\n",
-    "for line in ss.split(\"\\n\")[1:-1]:\n",
-    "    person = line.split(\"<\")[0]\n",
-    "    group = int(line[-2])\n",
-    "    \n",
-    "    # \"2\" in \"vision<grupo-2>\"\n",
-    "\n",
-    "    assert group in [1, 2, 3]\n",
-    "\n",
-    "    if group == 1:\n",
-    "        grupo1.append(person)\n",
-    "    elif group == 2:\n",
-    "        grupo2.append(person)\n",
-    "    else:\n",
-    "        grupo3.append(person)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"grupo_1.txt\", \"w\") as f:\n",
-    "    for person in grupo1:\n",
-    "        f.write(f\"{person}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"grupo_2.txt\", \"w\") as f:\n",
-    "    for person in grupo2:\n",
-    "        f.write(f\"{person}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"grupo_3.txt\", \"w\") as f:\n",
-    "    for person in grupo3:\n",
-    "        f.write(f\"{person}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from glob import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archivos_con_nombres = glob(\"grupo_*.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-25ee9c661711>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"gamora\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\"gamora\" in data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def buscar_nombre(nombre):\n",
-    "    archivos_con_nombres = glob(\"grupo_*.txt\")\n",
-    "    \n",
-    "    for archivo in archivos_con_nombres:\n",
-    "        with open(archivo, \"r\") as f:\n",
-    "            data = f.read()\n",
-    "            \n",
-    "        if nombre in data:\n",
-    "            return archivo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archivo_encontrado = buscar_nombre(nombre=\"vision\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'grupo_2.txt'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "archivo_encontrado"
+    "### CODE"
    ]
   }
  ],
