--- a/03_requests/00_requests.ipynb
+++ b/03_requests/00_requests.ipynb
@@ -948,6 +948,32 @@
     "    if elemento[\"id\"] in completados:\n",
     "        print(f\"Elemento completado: {elemento['completed']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 01\n",
+    "\n",
+    "\n",
+    "* Usando la API: https://exchangeratesapi.io/\n",
+    "    * Hay que entrar a la web y ahi sale la \"documentación\". Debéis usar la URL correcta para lo que queréis hacer.\n",
+    "* Crear una función de conversión de divisas.\n",
+    "* La función acepta 2 parámetros. El primer parámetro son la cantidad de \"EUR\". El otro parámetro es la divisa a la que queremos convertir. \n",
+    "\n",
+    "**Extra**\n",
+    "* Añadir un tercer parámetro `lista=False`.\n",
+    "* Si lo ejecutamos con `lista=True` la función nos debe devolver ADEMÁS de la conversión, una lista que incluya todas las divisas entre las que puede convertir."
+   ]
   }
  ],
  "metadata": {
@@ -966,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
