--- a/03_requests/00_x01.ipynb
+++ b/03_requests/00_x01.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio\n",
+    "## Ejercicio 01\n",
     "\n",
     "\n",
     "* Usando la API: https://exchangeratesapi.io/\n",
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
