--- a/00_zero/03_loops.ipynb
+++ b/00_zero/03_loops.ipynb
@@ -150,7 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_miembros = [\n",
+    "    \"susana\",\n",
+    "    \"daniel\",\n",
+    "    \"david\",\n",
+    "    \"jaume\",\n",
+    "    \"carles\",\n",
+    "    \"euro\",\n",
+    "    \"ivan\",\n",
+    "    \"jesus\",\n",
+    "    \"jordi\",\n",
+    "    \"miguel\",\n",
+    "    \"sebastian\",\n",
+    "    \"victor\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +190,7 @@
        "False"
       ]
      },
-     "execution_count": null,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
