--- a/00_zero/05_estructuras_de_datos.ipynb
+++ b/00_zero/05_estructuras_de_datos.ipynb
@@ -925,128 +925,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.get(\"https://gist.githubusercontent.com/polyrand/6a4f7e6e5bf2e68d1b91896d2fff235a/raw/0a9df3f1b9e3cef804825bd0c75b3360d69540dd/repr_list.py\").text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"listrepr.py\", \"w\") as f:\n",
-    "    f.write(r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from listrepr import list_repr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def show(l):\n",
-    "    print(list_repr(l))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "milista = [1,2,\"asd\", [1,2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 0        1        2        3        \n",
-      "+--------+--------+--------+--------+\n",
-      "|        |        |        |        |\n",
-      "|    1   |    2   |  asd   | [1, 2] |\n",
-      "|        |        |        |        |\n",
-      "+--------+--------+--------+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "show(milista)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "milista[3][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 0   1   \n",
-      "+---+---+\n",
-      "|   |   |\n",
-      "| 1 | 2 |\n",
-      "|   |   |\n",
-      "+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "show(milista[3])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1403,7 +1281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 02\n",
+    "## Ejercicio 02\n",
     "\n",
     "Con la lista `lista_miembros`.\n",
     "* Añadir al final de la lista el item `\"ricardo\"`\n",
@@ -1413,7 +1291,13 @@
     "    \n",
     "**Extra**:\n",
     "* Crear una variable GLOBAL: `x = 0`\n",
-    "* Por cada miembro. Si el nombre del miembro contiene la letra \"i\", sumad +1 a la variable `x`"
+    "* Por cada miembro. Si el nombre del miembro contiene la letra \"i\", sumad +1 a la variable `x`\n",
+    "\n",
+    "**Extra 2**:\n",
+    "\n",
+    "* Contar el número de veces que aparece una letra dentro de una cadena de texto.\n",
+    "    * Opcion 1: lista vacia, iterar sobre caracteres, `.append()`, método `.count()` de una lista...\n",
+    "    * Opcion 2: `.count()`"
    ]
   },
   {
