--- a/00_zero/01_tipos_de_datos.ipynb
+++ b/00_zero/01_tipos_de_datos.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "'123'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,6 +314,55 @@
    "source": [
     "str(123)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "124"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"123\") + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "124\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"123\"\n",
+    "b = 1\n",
+    "\n",
+    "resultado = int(a) + b\n",
+    "\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
