add examples and exercises

--- a/00_zero/03_loops.ipynb
+++ b/00_zero/03_loops.ipynb
@@ -80,6 +80,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Multiple `break`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = 10\n",
+    "\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = [random.randint(0,20) for _ in range(20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while y > -4:\n",
+    "    print(\"running\")\n",
+    "\n",
+    "    for v in vals:\n",
+    "        print(\"iterando lista\")\n",
+    "        if v == 19:\n",
+    "            print(\"llego al break dentro del for loop\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(v)\n",
+    "\n",
+    "    if y == -2:\n",
+    "        print(\"break dentro del while\")\n",
+    "        break\n",
+    "\n",
+    "    print(\"menos 1\")\n",
+    "    y -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ejercicio 01\n",
     "\n",
     "La torre agbar de Barcelona mide 114m. Tenemos cajas de 0.5 m. El primer día ponemos una caja. Cada día duplicamos el número de cajas.\n",
