--- a/00_zero/04_funciones.ipynb
+++ b/00_zero/04_funciones.ipynb
@@ -209,6 +209,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ejercicio 0\n",
+    "\n",
+    "Modificar la función `suma()` de manera que:\n",
+    "\n",
+    "* Si el parametro `a` es una cadena de texto, imprimir en pantalla `el parametro a es texto y debería ser un número`\n",
+    "* Si el parametro `b` es una cadena de texto, imprimir en pantalla `el parametro b es texto y debería ser un número`\n",
+    "\n",
+    "* En ambos casos, si se cumple la condición, hacer un `return`.\n",
+    "\n",
+    "**Pistas**\n",
+    "\n",
+    "```python\n",
+    "type(\"hola\") == str # True\n",
+    "\n",
+    "if isinstance(a, str):\n",
+    "    ...\n",
+    "\n",
+    "if ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\"Desempaquetar\" variables devueltas por una función."
    ]
   },
@@ -499,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def añadir_a_lista(valor, mylist=[]):\n",
+    "def lista_con_valor(valor, mylist=[]):\n",
     "    \n",
     "    mylist.append(valor)\n",
     "\n",
@@ -530,7 +555,7 @@
     "### Ejercicio 01\n",
     "\n",
     "```python\n",
-    "def añadir_a_lista(valor, mylist=[]):\n",
+    "def lista_con_valor(valor, mylist=[]):\n",
     "    \n",
     "    ######### AQUÍ ########\n",
     "    # check de la longitud de la lista\n",
@@ -565,9 +590,20 @@
     "\n",
     "* Crear dos variables que sea una listas vacías\n",
     "* Buscar sobre todas las palabras de la lista.\n",
+    "* Crear una función llamada `contiene_letra(palabra, letra)`. Esta función devuelve `True` si la letra está en a palabra.\n",
     "* Si una palabra contiene \"e\", añadir a la primera de las listas anteriores.\n",
     "* Si contiene \"a\" imprimir la palabra.\n",
-    "* Si no, añadir a la segunda lista que hemos creado el ÍNDICE de esta palabra\n",
+    "* Si no (no se cumple ninguna de las 2 condiciones), añadir a la segunda lista que hemos creado el ÍNDICE de esta palabra\n",
+    "\n",
+    "**Pistas**\n",
+    "\n",
+    "```python\n",
+    "def check_ok(a, b):\n",
+    "    return True\n",
+    "\n",
+    "if check_ok(1, 2):\n",
+    "    print(\"Yes!\")\n",
+    "```\n",
     "\n",
     "**Extra (avisadme de que tenéis hecha la parte de arriba antes de poneros con esto!)**:\n",
     "* Crear una lista nueva que sea una copia de esta pero invertida. Es decir, que empiece con \"language\" y termine con \"Python\".\n",
