--- a/00_zero/05_estructuras_de_datos.ipynb
+++ b/00_zero/05_estructuras_de_datos.ipynb
@@ -933,11 +933,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "midiccionario = {\"ricardo\": \"profesor\", \"susana\": \"alumna\", \"numero de alumnos\": 8}"
+    "midiccionario = {\"ricardo\": \"profesor\", \"susana\": \"alumna\", \"numero de alumnos\": 8}\n",
+    "\n",
+    "# midiccionario = {\"ricardo\": {\"profesion\": \"profesor\", \"hobbies\": {\"principal\": \"natacion\", \"secudario\": \"baile\"},}, \"susana\": \"alumna\", \"numero de alumnos\": 8}"
    ]
   },
   {
@@ -977,7 +979,8 @@
     }
    ],
    "source": [
-    "midiccionario[\"numero de alumnos\"]"
+    "midiccionario[\"numero de alumnos\"]\n",
+    "# midiccionario[\"ricardo\"][\"hobbies\"][\"principal\"]"
    ]
   },
   {
@@ -1062,6 +1065,105 @@
     "for llave, valor in midiccionario.items():\n",
     "    print(\"La llave es:\", llave)\n",
     "    print(\"El valor es:\", valor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`.items()` paso a paso**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primero obtenemos la \"lista\" (no es una lista) que nos devuelve el método `.items()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('ricardo', 'profesor'), ('susana', 'alumna'), ('numero de alumnos', 8)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = midiccionario.items()\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo convertimos, ahora si, a una lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('ricardo', 'profesor'), ('susana', 'alumna'), ('numero de alumnos', 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = list(items)\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora podemos indexar sobre esa lista. Cada elemento de la lista será un `tuple` con 2 elementos, el primero es la llave (`key`) y el segundo es el valor (`value`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('susana', 'alumna')\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_1 = items[1]\n",
+    "\n",
+    "print(item_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al ser un `tuple`, también podemos indexarlo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_1[0]"
    ]
   },
   {
