--- a/00_zero/04_funciones.ipynb
+++ b/00_zero/04_funciones.ipynb
@@ -611,6 +611,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pistas ++**\n",
+    "\n",
+    "```python\n",
+    "def contiene_letra(palabra, letra):\n",
+    "\n",
+    "    if ...:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "for palabra in mylist:\n",
+    "    if contiene_letra(palabra, ...):\n",
+    "        # añadir a lista_con_e\n",
+    "    if contiene_letra(palabra, ...):\n",
+    "        # print\n",
+    "\n",
+    "    else:\n",
+    "        # indice_de_palabra = mylist.???\n",
+    "        # añadir a lista_indices el valor indice_de_palabra\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
