--- a/00_zero/04_funciones.ipynb
+++ b/00_zero/04_funciones.ipynb
@@ -588,8 +588,8 @@
    "source": [
     "### Ejercicio 02\n",
     "\n",
-    "* Crear dos variables que sea una listas vacías\n",
-    "* Buscar sobre todas las palabras de la lista.\n",
+    "* Crear dos variables que sea una listas vacías (ya está hecho).\n",
+    "* Iterar sobre todas las palabras de la lista (ya está hecho).\n",
     "* Crear una función llamada `contiene_letra(palabra, letra)`. Esta función devuelve `True` si la letra está en a palabra.\n",
     "* Si una palabra contiene \"e\", añadir a la primera de las listas anteriores.\n",
     "* Si contiene \"a\" imprimir la palabra.\n",
