--- a/00_zero/04_x03.ipynb
+++ b/00_zero/04_x03.ipynb
@@ -117,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opcion 2. Sin usar la función `check_letra()`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -150,6 +157,39 @@
     "    if \"a\" in palabra:\n",
     "        print(palabra)\n",
     "        \n",
+    "    else:\n",
+    "        indice = mylist.index(palabra)\n",
+    "        lista_indices.append(indice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mencionando el tema de las mayúsculas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_con_e = []\n",
+    "lista_indices = []\n",
+    "\n",
+    "for palabra in mylist:\n",
+    "\n",
+    "    # para solucionar el problema con las mayúsculas, hay que usar el metodo\n",
+    "    # de las cadenas de texto .lower(). Lo veremos en el tema siguiente.\n",
+    "\n",
+    "    # if contiene_letra(palabra.lower(), \"e\"):\n",
+    "    if contiene_letra(palabra, \"e\"):\n",
+    "        lista_con_e.append(palabra)\n",
+    "\n",
+    "    # elif contiene_letra(palabra.lower(), \"a\"):\n",
+    "    elif contiene_letra(palabra, \"a\"):\n",
+    "        print(palabra)\n",
     "    else:\n",
     "        indice = mylist.index(palabra)\n",
     "        lista_indices.append(indice)\n",
